--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "qrcode": "^1.2.2",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-route": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.19.1"
+    "@vue/cli-plugin-babel": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-service": "^3.0.4",
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
